# icedantic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: changelog.yml
src/icedantic/: exceptions.py  model.py
tests/: test_iceberg_model.py
